# rust-backend

./: .envrc.example  .gitignore  Makefile.toml  README.md
apps/api/: Cargo.toml
apps/api/src/: events.rs  graphql.rs  lib.rs  main.rs  router.rs
apps/api/src/events/: connections.rs  handler.rs  messages.rs  router.rs
config/: ci.toml  default.toml  local.toml.example  test.toml.example
libs/auth/: Cargo.toml
libs/auth/src/: authenticate.rs  errors.rs  jwks.rs  lib.rs
libs/domains/: Cargo.toml
libs/domains/src/: albums.rs  lib.rs  tracks.rs  users.rs
libs/domains/src/role_grants/: model.rs
libs/domains/src/users/: model.rs  mutations.rs  resolver.rs  service.rs
libs/utils/: Cargo.toml
libs/utils/src/: config.rs  errors.rs  lib.rs  pagination.rs
migrations/: 20230210165242_users.sql
