[package]
name = "xor-domains"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-graphql = { version = "4.0", features = ["chrono", "dataloader"] }
async-trait = "0.1.41"
xor-auth = { path = "../auth" }
xor-utils = { path = "../utils" }
#xor-testing = { path = "../testing" }
chrono = { version = "0.4.19", features = ["serde"] }
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
hyper = "0.14"
oso = "0.26.0"
oso-derive = "0.26.0"
rand = "0.8"
sea-orm = { version = "0.10", features = [
    "macros",
    "mock",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
maplit = { version = "1" }
mockall = "0.11"
pretty_assertions = { version = "1.2" }
rand = "0.8"
slug = "0.1.4"
